--- a/dnk-basic-film-stream/src/App.css
+++ b/dnk-basic-film-stream/src/App.css
@@ -81,14 +81,71 @@ html {
   margin-bottom: 10px;
   font-size: 30px;
 }
-
-.filter {
-  margin-bottom: 20px;
+/* filter section */
+.filter-content {
+  padding: 10px;
+  background-color: rgba(149, 149, 149, 0.268);
+  padding: 10px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+  font-size: 18px;
+  text-transform: uppercase;
 }
 
-.pagination {
-  margin-bottom: 20px;
+.filter-content h3{
+  margin-bottom: 10px;
 }
+
+.filter-content .filter,
+.filter-content .pagination {
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+  background-color: lightgray;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.filter-content .filter .checkbox {
+  cursor: pointer;
+}
+
+.filter-content .filter .checkbox:hover {
+  color: green;
+  font-weight: bold;
+}
+
+.filter-content .filter span {
+  margin: 0 10px 0 5px;
+}
+
+.filter-content .pagination button{
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  border: 1px solid black;
+  color: black;
+  cursor: pointer;
+  margin: 0 10px;
+  font-size: 18px;
+}
+.filter-content .pagination select{
+  width: 90px;
+  height: 35px;
+  text-align: center;
+}
+
+.filter-content .pagination button:hover{
+  background-color: green;
+  font-size: 20px;
+}
+
 
 .movies-grid {
   display: grid;
