--- a/dnk-basic-film-stream/src/App.css
+++ b/dnk-basic-film-stream/src/App.css
@@ -68,19 +68,18 @@ html {
 
 .header .header-content .details .title {
   background-color: rgba(211, 211, 211, 0.22);
-  border-radius: 30px;
+  border-radius: 10px;
   padding: 10px;
-  font-size: 80px;
   font-weight: bold;
 }
 
 .header .header-content .details .category {
   background-color: rgba(211, 211, 211, 0.22);
-  border-radius: 30px;
+  border-radius: 10px;
   padding: 10px;
   margin-bottom: 10px;
-  font-size: 30px;
 }
+
 /* filter section */
 .filter-content {
   padding: 10px;
@@ -135,6 +134,7 @@ html {
   margin: 0 10px;
   font-size: 18px;
 }
+
 .filter-content .pagination select{
   width: 90px;
   height: 35px;
@@ -146,48 +146,117 @@ html {
   font-size: 20px;
 }
 
+/* sections movies */
 
-.movies-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-}
-
-/* Responsive Design: Adjust grid based on screen size */
-@media (max-width: 1200px) {
-  .movies-grid {
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  }
-}
-
-@media (max-width: 768px) {
-  .movies-grid {
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  }
-}
-
-@media (max-width: 480px) {
-  .movies-grid {
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  }
-}
-
-.movie-card {
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  border-radius: 8px;
-  text-align: center;
-}
-
-.movie-image {
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px;
-  margin-bottom: 10px;
-}
-
-.like-bar {
+.movies-grid{
+  padding: 5px;
+  background-color: rgba(149, 149, 149, 0.268);
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.movies-grid .movie-card{
+  cursor: ew-resize;
+  width: 400px;
+  height: 180px;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgray;
+}
+
+.movies-grid .movie-card .image{
+  flex: 1;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.movies-grid .movie-card .details{
+  flex: 1;
+  padding: 0 5px;
+  height: 100%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
   justify-content: space-between;
-  margin: 10px 0;
+}
+
+.movies-grid .movie-card .details h2{
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.movies-grid .movie-card .details .delete{
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.movies-grid .movie-card .details .delete button{  
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  border: 1px solid red;
+  color: red;
+  background-color: white;
+}
+
+.movies-grid .movie-card .details .delete button:hover{  
+  border: 1px solid white;
+  color: white;
+  background-color: red;
+}
+
+.movies-grid .movie-card .details .like-bar{
+  height: 35px;
+  background-color: rgba(149, 149, 149, 0.268);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+}
+
+.movies-grid .movie-card .details .like-bar .like,
+.movies-grid .movie-card .details .like-bar .dislike{
+  min-width: 60px;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.movies-grid .movie-card .details .like-bar .like{
+  border-right: 1px solid black;
+  border-radius: 30px 0 0 30px;
+}
+
+.movies-grid .movie-card .details .like-bar .dislike{
+  border-radius: 0 30px 30px 0;
+}
+
+.movies-grid .movie-card .details .like-bar .like:hover{
+  background-color: rgb(120, 226, 120);
+}
+
+.movies-grid .movie-card .details .like-bar .dislike:hover{
+  background-color: rgb(226, 53, 53);
+}
+
+footer {
+  background-color: black;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 18px;
 }
