test UI/UX and fonctionnality

--- a/dnk-basic-film-stream/src/App.css
+++ b/dnk-basic-film-stream/src/App.css
@@ -232,6 +232,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 5px;
 }
 
 .movies-grid .movie-card .details .like-bar .like{
