--- a/dnk-basic-film-stream/src/App.css
+++ b/dnk-basic-film-stream/src/App.css
@@ -85,26 +85,39 @@ html {
 
 /* filter section */
 .filter-content {
-  padding: 10px;
-  background-color: rgba(149, 149, 149, 0.268);
-  padding: 10px;
+  height: max-content;
   margin: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  background-color: rgba(149, 149, 149, 0.268);
   border-radius: 10px;
   font-size: 18px;
   text-transform: uppercase;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.filter-content-details,
+.filter-pagination-details{
+  width: max-content;
+  height: 100px;
+  margin: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .filter-content h3{
   margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .filter-content .filter,
 .filter-content .pagination {
+  height: 100%;
   padding: 10px;
   display: flex;
   justify-content: space-around;
@@ -112,7 +125,6 @@ html {
   border-radius: 10px;
   background-color: lightgray;
   font-size: 14px;
-  margin-bottom: 10px;
 }
 
 .filter-content .filter .checkbox {
