--- a/dnk-basic-film-stream/src/App.css
+++ b/dnk-basic-film-stream/src/App.css
@@ -110,9 +110,9 @@ html {
   flex-direction: column;
 }
 
-.filter-content h3{
+h3{
   margin-bottom: 10px;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .filter-content .filter,
@@ -124,13 +124,11 @@ html {
   align-items: center;
   border-radius: 10px;
   background-color: lightgray;
-  font-size: 14px;
 }
 
 .filter-content .filter .checkbox {
   cursor: pointer;
   text-transform: capitalize;
-  font-size: 12px;
 }
 
 .filter-content .filter .checkbox:hover {
@@ -140,6 +138,7 @@ html {
 
 .filter-content .filter span {
   margin: 0 10px 0 5px;
+  font-size: 12px;
 }
 
 .filter-content .pagination button{
@@ -319,6 +318,10 @@ footer {
     padding: 10px;
     font-size: 26px;
   }
+
+  .filter-content .filter span {
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -358,6 +361,10 @@ footer {
   .header .header-content .details .category {
     padding: 8px;
     font-size: 24px;
+  }
+
+  .filter-content .filter span {
+    font-size: 12px;
   }
 }
 
@@ -399,6 +406,10 @@ footer {
     padding: 7px;
     font-size: 22px;
   }
+
+  .filter-content .filter span {
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 690px) {
@@ -439,6 +450,10 @@ footer {
     padding: 6px;
     font-size: 20px;
   }
+
+  .filter-content .filter span {
+    font-size: 11px;
+  }
 }
 
 @media (max-width: 500px) {
@@ -477,6 +492,10 @@ footer {
   
   .header .header-content .details .category {
     padding: 5px;
-    font-size: 18px;
+    font-size: 12px;
+  }
+
+  .filter-content .filter span {
+    font-size: 10px;
   }
 }
