--- a/dnk-basic-film-stream/src/App.css
+++ b/dnk-basic-film-stream/src/App.css
@@ -38,7 +38,7 @@ html {
   width: 60px;
   background-color: rgba(255, 252, 252, 0.348);
   border-radius: 20px;
-  border: 2px solid black;
+  border: 2px solid gray;
   color: black;
   padding: 10px;
   display: flex;
@@ -99,7 +99,7 @@ html {
 }
 
 .filter-content-details,
-.filter-pagination-details{
+.filter-pagination-details {
   width: max-content;
   height: 100px;
   margin: 10px;
@@ -110,7 +110,7 @@ html {
   flex-direction: column;
 }
 
-h3{
+h3 {
   margin-bottom: 10px;
   font-size: 14px;
 }
@@ -118,7 +118,7 @@ h3{
 .filter-content .filter,
 .filter-content .pagination {
   height: 100%;
-  padding: 10px;
+  padding: 5px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -126,46 +126,128 @@ h3{
   background-color: lightgray;
 }
 
-.filter-content .filter .checkbox {
+/* filter */
+.filter-content .filter .checkbox-content {
   cursor: pointer;
   text-transform: capitalize;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(168, 166, 166);
+  font-weight: 500;
+  font-size: 14px;
 }
 
-.filter-content .filter .checkbox:hover {
-  color: green;
-  font-weight: bold;
+.filter-content .filter .checkbox-content:hover {
+  border: 2px solid white;
+  background-color: #6cbe45;
+  color: white;
 }
 
 .filter-content .filter span {
   margin: 0 10px 0 5px;
-  font-size: 12px;
 }
 
-.filter-content .pagination button{
+/* Check box component */
+.checkbox-wrapper:hover .check {
+  stroke-dashoffset: 0;
+}
+
+.checkbox-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+}
+
+.checkbox-wrapper .background {
+  fill: lightgray;
+  transition: ease all 0.6s;
+  -webkit-transition: ease all 0.6s;
+}
+
+.checkbox-wrapper .stroke {
+  fill: none;
+  stroke: white;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+  stroke-dashoffset: 100;
+  stroke-dasharray: 100;
+  transition: ease all 0.6s;
+  -webkit-transition: ease all 0.6s;
+}
+
+.checkbox-wrapper .check {
+  fill: none;
+  stroke: white;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2px;
+  stroke-dashoffset: 22;
+  stroke-dasharray: 22;
+  transition: ease all 0.6s;
+  -webkit-transition: ease all 0.6s;
+}
+
+.checkbox-wrapper input[type=checkbox] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  margin: 0;
+  opacity: 0;
+  -appearance: none;
+  -webkit-appearance: none;
+}
+
+.checkbox-wrapper input[type=checkbox]:hover {
+  cursor: pointer;
+}
+
+.checkbox-wrapper input[type=checkbox]:checked+svg .background {
+  fill: #6cbe45;
+}
+
+.checkbox-wrapper input[type=checkbox]:checked+svg .stroke {
+  stroke-dashoffset: 0;
+}
+
+.checkbox-wrapper input[type=checkbox]:checked+svg .check {
+  stroke-dashoffset: 0;
+}
+
+/* pagination */
+
+.filter-content .pagination button {
   width: 30px;
   height: 30px;
+  border: none;
   border-radius: 30px;
-  border: 1px solid black;
+  background-color: rgb(168, 166, 166);
   color: black;
   cursor: pointer;
   margin: 0 10px;
-  font-size: 18px;
+  font-size: 16px;
 }
 
-.filter-content .pagination select{
+.filter-content .pagination button:hover {
+  border: 2px solid white;
+  background-color: #6cbe45;
+}
+
+.filter-content .pagination select {
   width: 90px;
   height: 35px;
   text-align: center;
 }
 
-.filter-content .pagination button:hover{
-  background-color: green;
-  font-size: 20px;
-}
-
 /* sections movies */
 
-.movies-grid{
+.movies-grid {
   padding: 5px;
   background-color: rgba(149, 149, 149, 0.268);
   display: flex;
@@ -174,7 +256,7 @@ h3{
   align-items: center;
 }
 
-.movies-grid .movie-card{
+.movies-grid .movie-card {
   cursor: ew-resize;
   width: 400px;
   height: 180px;
@@ -187,13 +269,13 @@ h3{
   background-color: lightgray;
 }
 
-.movies-grid .movie-card .image{
+.movies-grid .movie-card .image {
   flex: 1;
   height: 100%;
   border-radius: 10px;
 }
 
-.movies-grid .movie-card .details{
+.movies-grid .movie-card .details {
   flex: 1;
   padding: 0 5px;
   height: 100%;
@@ -204,19 +286,19 @@ h3{
   justify-content: space-between;
 }
 
-.movies-grid .movie-card .details h2{
+.movies-grid .movie-card .details h2 {
   font-size: 18px;
   margin-bottom: 20px;
 }
 
-.movies-grid .movie-card .details .delete{
+.movies-grid .movie-card .details .delete {
   width: 100%;
   display: flex;
   justify-content: end;
   align-items: center;
 }
 
-.movies-grid .movie-card .details .delete button{  
+.movies-grid .movie-card .details .delete button {
   cursor: pointer;
   width: 30px;
   height: 30px;
@@ -226,13 +308,13 @@ h3{
   background-color: white;
 }
 
-.movies-grid .movie-card .details .delete button:hover{  
+.movies-grid .movie-card .details .delete button:hover {
   border: 1px solid white;
   color: white;
   background-color: red;
 }
 
-.movies-grid .movie-card .details .like-bar{
+.movies-grid .movie-card .details .like-bar {
   height: 35px;
   background-color: rgba(149, 149, 149, 0.268);
   display: flex;
@@ -242,7 +324,7 @@ h3{
 }
 
 .movies-grid .movie-card .details .like-bar .like,
-.movies-grid .movie-card .details .like-bar .dislike{
+.movies-grid .movie-card .details .like-bar .dislike {
   min-width: 60px;
   height: 100%;
   cursor: pointer;
@@ -252,20 +334,20 @@ h3{
   padding: 0 5px;
 }
 
-.movies-grid .movie-card .details .like-bar .like{
-  border-right: 1px solid black;
+.movies-grid .movie-card .details .like-bar .like {
+  border-right: 1px solid gray;
   border-radius: 30px 0 0 30px;
 }
 
-.movies-grid .movie-card .details .like-bar .dislike{
+.movies-grid .movie-card .details .like-bar .dislike {
   border-radius: 0 30px 30px 0;
 }
 
-.movies-grid .movie-card .details .like-bar .like:hover{
+.movies-grid .movie-card .details .like-bar .like:hover {
   background-color: rgb(120, 226, 120);
 }
 
-.movies-grid .movie-card .details .like-bar .dislike:hover{
+.movies-grid .movie-card .details .like-bar .dislike:hover {
   background-color: rgb(226, 53, 53);
 }
 
@@ -292,28 +374,28 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  
+
   .header .header-content .navigation {
     width: 40px;
     padding: 10px;
   }
-  
+
   .header .header-content .navigation span {
     font-size: 28px;
   }
-  
+
   .header .header-content .details {
     height: 60%;
     padding: 10px;
     align-items: center;
     justify-content: space-between;
   }
-  
+
   .header .header-content .details .title {
     padding: 10px;
     font-size: 48px;
   }
-  
+
   .header .header-content .details .category {
     padding: 10px;
     font-size: 26px;
@@ -336,28 +418,28 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  
+
   .header .header-content .navigation {
     width: 36px;
     padding: 8px;
   }
-  
+
   .header .header-content .navigation span {
     font-size: 28px;
   }
-  
+
   .header .header-content .details {
     height: 60%;
     padding: 8px;
     align-items: center;
     justify-content: space-between;
   }
-  
+
   .header .header-content .details .title {
     padding: 8px;
     font-size: 46px;
   }
-  
+
   .header .header-content .details .category {
     padding: 8px;
     font-size: 24px;
@@ -380,28 +462,28 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  
+
   .header .header-content .navigation {
     width: 34px;
     padding: 7px;
   }
-  
+
   .header .header-content .navigation span {
     font-size: 24px;
   }
-  
+
   .header .header-content .details {
     height: 50%;
     padding: 7px;
     align-items: center;
     justify-content: space-between;
   }
-  
+
   .header .header-content .details .title {
     padding: 7px;
     font-size: 44px;
   }
-  
+
   .header .header-content .details .category {
     padding: 7px;
     font-size: 22px;
@@ -424,28 +506,28 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  
+
   .header .header-content .navigation {
     width: 32px;
     padding: 6px;
   }
-  
+
   .header .header-content .navigation span {
     font-size: 22px;
   }
-  
+
   .header .header-content .details {
     height: 50%;
     padding: 6px;
     align-items: center;
     justify-content: space-between;
   }
-  
+
   .header .header-content .details .title {
     padding: 6px;
     font-size: 42px;
   }
-  
+
   .header .header-content .details .category {
     padding: 6px;
     font-size: 20px;
@@ -468,28 +550,28 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  
+
   .header .header-content .navigation {
     width: 30px;
     padding: 5px;
   }
-  
+
   .header .header-content .navigation span {
     font-size: 20px;
   }
-  
+
   .header .header-content .details {
     height: 50%;
     padding: 5px;
     align-items: center;
     justify-content: space-between;
   }
-  
+
   .header .header-content .details .title {
     padding: 5px;
     font-size: 40px;
   }
-  
+
   .header .header-content .details .category {
     padding: 5px;
     font-size: 12px;
